discussion/kv_engine/181596/181596_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

Don't submit disabled events to the audit daemon

Change-Id: I1eb473c4cc6cfa27597cd59b872e39dc06bcde9e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-21 06:17:00.000000000
Message: 
Uploaded patch set 12: Patch Set 11 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-21 06:43:42.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21368/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:320:26: error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
    if (audit_eventid != NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON) {
                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21368/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21368/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50590/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/mcaudit.cc(320): error C2065: "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50590/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42442/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42442/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11193/ : FAILURE

Compile error at [2022-10-21T06:25:29.555Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/mcaudit.cc:320:26:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11193/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23396/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23396/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23799/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23799/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24632/ : FAILURE

Compile error at [2022-10-21T06:33:07.802Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24632/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31817/ : FAILURE

Compile error at [2022-10-21T06:37:04.675Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31817/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22815/ : FAILURE

Compile error at [2022-10-21T06:28:45.922Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22815/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11097/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11097/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20626/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-10-21 13:54:50.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
